software-center (3.1.3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * daily-build.recipe:
    - add daily build recipe

  [ Kiwinote ]
  * apt-xapian-index-plugin/origin.py (tmp location),
    softwarecenter/db/database.py,
    softwarecenter/db/update.py:
    - make search queries containing '-' work (LP: #497708)
  * po/POTFILES.in:
    mark softwarecenter/view/softwarepane.py for translation (LP: #659955)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Nov 2010 15:02:23 +0100

software-center (3.1.2) natty; urgency=low

  [ Michael Vogt ]
  * merged lp:~kiwinote/software-center/getting-the-small-things-right,
    many thanks!
  * test/test_where_is_it.py, test/data/fake-applications.menu:
    use test/data/fake-applications.menu in the test_where_is_it.py
    that points to  <LegacyDir>/usr/share/app-install/desktop</LegacyDir>
    to ensure the "where-is-it" tests work on all machines
  * test/test_appdetails_view.py:
    - add better message on missing python-mock
  * softwarecenter/enums.py:
    - add DB_SCHEMA_VERSION as metadata to the DB and ensure we rebuild
      the local DB on mismatch (the systemwide one is handlded already)
  * softwarecenter/db/update.py, utils/update-software-center:
    - do no longer log to the root logger but instead to a db.update logger
  * test/test_mime.py:
    - use the local DB in the test and build it if needed
  * setup.py:
    - add "lint" target that runs pocketlint
  * softwarecenter/apt/apthistory.py, softwarecenter/db/application.py:
    - do lazy loading in the constructor in a idle_add() function
  * test/test_database.py:
    - update test for lazy loading
  * softwarecenter/view/historypane.py:
    - ensure the lazy loaded history is ready before displaying it
  * test/Makefile, .bzr-builddeb/default.conf:
    - add clean target and run it on bzr-buildpackage

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't delete about dialog upon closing the window (LP: #658678)