@@ -3,6 +3,8 @@ software-center (3.1.3) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * daily-build.recipe:
     - add daily build recipe
+  * test/test_xapian.py:
+    - add test for "find more similar apps" DB query
 
   [ Kiwinote ]
   * apt-xapian-index-plugin/origin.py (tmp location),
